# pubpdf

./: .gitignore  LICENSE  README.md  pyproject.toml
src/parsers/: table_data.py
